Updated Hospitality industry projects

--- a/pages/hospitality.html
+++ b/pages/hospitality.html
@@ -74,16 +74,37 @@
                 <p class="image-caption">Architecture Diagram</p>
                 <div class="content-main single-post padDiv">
                   
-                  <blockquote>Business Objective is to build a modern data lake architecture which will support Advanced Machine Learning for Big data.</blockquote>
-                  <p class="mb-30">UAE based client is interested in leveraging the power of AI in it's business. </p> 
-                  <!-- <p class="mb-30">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                  <blockquote>If you are still looking for that one person who will change your life, take a look in the mirror.</blockquote>
-                  <p class="mb-30">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-                    Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections
-                    1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum,
-                    "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p> -->
+                  <blockquote>The objective of the business is to build a modern data lake architecture that supports Advanced Machine Learning for Big data.</blockquote>
+                  <p class="mb-30">UAE based client is interested in leveraging the power of AI in it's business. Clients have their data in different data source and
+                                   looking for a single solution where client can perform analysis on data, machine learning on data, adn create ad-hoc reporting for
+                                   executives.<br>
+                                   In this project I've created Lakehouse architecure, Machine Learning models, and Ad-hoc reportings.<br>
+                                   Worked on following technologies in this project:
+                                  <ul class="tech-logo">
+                                    <li>
+                                      <img src="../images/python-logo.png"> Used as a core programming langauge.
+                                    </li>
+                                    <li>
+                                      <img src="../images/databricks-logo.png"> For ETL/ELT, Data processing, and Ad-hoc Jobs.
+                                    </li>
+                                    <li>
+                                      <img src="../images/deltalake-logo.png"> Serves as a storage layer in lakehouse architecture
+                                    </li>
+                                    <li>
+                                      <img src="../images/turicreate-logo.jpeg"> Hybrid recommendation was used, and built using Turicreate.
+                                    </li>
+                                    <li>
+                                      <img src="../images/sklearn-logo.png"> Sklearn used for creating churn prediction model.
+                                    </li>
+                                    <li>
+                                      <img src="../images/kepler-logo.png"> Kepler was used for creating interactive Geo-Spatial visualization.
+                                    </li>
+                                    <li>
+                                      <img src="../images/azure-logo.png"> Solution was hosted on Microsoft Azure.
+                                    </li>
+                                    
+                                  </ul>
+                  </p>
                 </div>
               </div>
             </div>
@@ -124,23 +145,14 @@
     <div class="socials-media text-center">
       <ul class="list-unstyled">
         <li>
-          <a href="#"><i class="ion-social-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/mumaramanat/"><i class="ion-social-linkedin"></i></a>
         </li>
         <li>
-          <a href="#"><i class="ion-social-twitter"></i></a>
-        </li>
+          <a href="https://stackoverflow.com/users/6840305/muhammad-umar-amanat"><i class="ion-code"></i></a>
+        </li>  
         <li>
-          <a href="#"><i class="ion-social-instagram"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="ion-social-googleplus"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="ion-social-tumblr"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="ion-social-dribbble"></i></a>
-        </li>
+          <a href="https://www.upwork.com/freelancers/~01161f4c84d6531c94"><i class="ion-bag"></i></a>
+        </li>  
       </ul>
     </div>
 
