--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <ul class="nav-menu list-unstyled">
             <li><a href="#header" class="smoothScroll">Home</a></li>
             <li><a href="#about" class="smoothScroll">About Me</a></li>
-            <li><a href="#experience" class="smoothScroll">experience</a></li>
-            <li><a href="#education" class="smoothScroll">education</a></li>
-            <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
+            <li><a href="#experience" class="smoothScroll">Experience</a></li>
+            <li><a href="#education" class="smoothScroll">Education</a></li>
+            <li><a href="#portfolio" class="smoothScroll">projects</a></li>
             <!-- <li><a href="#journal" class="smoothScroll">Blog</a></li> -->
             <li><a href="#contact" class="smoothScroll">Contact</a></li>
           </ul>
@@ -369,7 +369,7 @@
     <div id="portfolio" class="text-center paddsection">
       <div class="container">
         <p class="p-heading">
-          Portfolio
+          Projects
         </p>
       </div>
 
