--- a/pages/hospitality.html
+++ b/pages/hospitality.html
@@ -76,7 +76,7 @@
                   
                   <blockquote>The objective of the business is to build a modern data lake architecture that supports Advanced Machine Learning for Big data.</blockquote>
                   <p class="mb-30">UAE based client is interested in leveraging the power of AI in it's business. Clients have their data in different data source and
-                                   looking for a single solution where client can perform analysis on data, machine learning on data, adn create ad-hoc reporting for
+                                   looking for a single solution where client can perform analysis on data, machine learning on data, and create ad-hoc reporting for
                                    executives.<br>
                                    In this project I've created Lakehouse architecure, Machine Learning models, and Ad-hoc reportings.<br>
                                    Worked on following technologies in this project:
