corrected images and text in logo

--- a/pages/ssot.html
+++ b/pages/ssot.html
@@ -84,22 +84,28 @@
                                    Worked on following technologies in this project:
                                   <ul class="tech-logo">
                                     <li>
-                                      <img src="../images/python-logo.png"> Some of pipelines were built using Python.
+                                      <img src="../images/python-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Some of pipelines were built using Python.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/pyspark-logo.png"> From ingensting data to creating a final Lakehouse, PySpark proved to be a crucial tool.
+                                      <img src="../images/pyspark-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">From ingensting data to creating a final Lakehouse, 
+                                        PySpark proved to be a crucial tool.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/databricks_sql-logo.png"> Delta live tables` pipelines were built using Databricks SQL.
+                                      <img src="../images/databricks_sql-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Delta live tables pipelines were built using Databricks SQL.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/databricks-logo.png"> Databricks used as a data processing tool.
+                                      <img src="../images/databricks-logo.png" class="col-sm-4">
+                                      <span class="col-sm-8">Databricks used as a data processing tool.</span>
                                     </li>
                                     <li >
-                                      <img src="../images/keyvault-logo_2.png" style="width: 100px"> All databases, and delta lakes connections keys were secured by Azure KeyVault
+                                      <img src="../images/keyvault-logo_2.png" class="col-sm-4">  <span class="col-sm-8">All databases, 
+                                        and delta lakes connections keys were secured by Azure KeyVault</span>
                                     </li> 
                                     <li>
-                                      <img src="../images/azure-logo.png"> Solution was hosted on Microsoft Azure.
+                                      <img src="../images/azure-logo.png" class="col-sm-4">  <span class="col-sm-8">Solution was hosted on Microsoft Azure.</span>
                                     </li>
                                     
                                   </ul>
