--- a/pages/hospitality.html
+++ b/pages/hospitality.html
@@ -82,25 +82,33 @@
                                    Worked on following technologies in this project:
                                   <ul class="tech-logo">
                                     <li>
-                                      <img src="../images/python-logo.png"> Used as a core programming langauge.
+                                      <img src="../images/python-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Used as a core programming langauge.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/databricks-logo.png"> For ETL/ELT, Data processing, and Ad-hoc Jobs.
+                                      <img src="../images/databricks-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">For ETL/ELT, Data processing, and Ad-hoc Jobs
+                                      </span>
                                     </li>
                                     <li>
-                                      <img src="../images/deltalake-logo.png"> Serves as a storage layer in lakehouse architecture
+                                      <img src="../images/deltalake-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Serves as a storage layer in lakehouse architecture</span>
                                     </li>
                                     <li>
-                                      <img src="../images/turicreate-logo.jpeg"> Hybrid recommendation was used, and built using Turicreate.
+                                      <img src="../images/turicreate-logo.jpeg" class="col-sm-4"> 
+                                      <span class="col-sm-8">Hybrid recommendation was used, and built using Turicreate.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/sklearn-logo.png"> Sklearn used for creating churn prediction model.
+                                      <img src="../images/sklearn-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Sklearn used for creating churn prediction model.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/kepler-logo.png"> Kepler was used for creating interactive Geo-Spatial visualization.
+                                      <img src="../images/kepler-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Kepler was used for creating interactive Geo-Spatial visualization.</span>
                                     </li>
                                     <li>
-                                      <img src="../images/azure-logo.png"> Solution was hosted on Microsoft Azure.
+                                      <img src="../images/azure-logo.png" class="col-sm-4"> 
+                                      <span class="col-sm-8">Solution was hosted on Microsoft Azure.</span>
                                     </li>
                                     
                                   </ul>
