added sagemaker case study

--- a/index.html
+++ b/index.html
@@ -400,7 +400,16 @@
                 class="col-lg-4 col-md-6 portfolio-thumbnail all data_eng uikits webdesign">
                 <a href="pages/ssot.html">   
                   <img class="image-overlay" src="images/portfolio/ssot_wat.png" alt="img" />
-                  <div >Single Source of Truth Using Databricks</div>              
+                  <div>Single Source of Truth Using Databricks</div>              
+                </a> 
+              </div>
+
+              <!-- ML start here -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-thumbnail all data_eng uikits webdesign">
+                <a href="pages/sagemaker_ml.html">   
+                  <img class="image-overlay" src="images/portfolio/sagemake_ml_wat.png" alt="img" />
+                  <div>Sales Forecasting</div>              
                 </a> 
               </div>
 
