correct data filter for ML projects

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
               <!-- ML start here -->
               <div
-                class="col-lg-4 col-md-6 portfolio-thumbnail all data_eng uikits webdesign">
+                class="col-lg-4 col-md-6 portfolio-thumbnail all machine_learning uikits webdesign">
                 <a href="pages/sagemaker_ml.html">   
                   <img class="image-overlay" src="images/portfolio/sagemake_ml_wat.png" alt="img" />
                   <div>Sales Forecasting</div>              
