--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </p>
               <p class="separator">
                 I have more than 5 years of experience in building Data intensive application. So far in my experience
-                I got the oppurtuinity to deploy solutions on AWS, Azure, and Databricks.
+                I got opportunities to deploy solutions on AWS, Azure, and Databricks.
               </p>
             </div>
           </div>
