Added cloud warehouse use case

--- a/index.html
+++ b/index.html
@@ -413,6 +413,15 @@
                 </a> 
               </div>
 
+              <!-- Cloud warehouse using synapse -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-thumbnail all machine_learning uikits webdesign">
+                <a href="pages/adf_synapse.html">   
+                  <img class="image-overlay" src="images/portfolio/cloud_warehouse_adf_synapse_wat.png" alt="img" />
+                  <div>Cloud Warehouse using Azure Synapse</div>              
+                </a> 
+              </div>
+
             </div>
           </div>
         </div>
