--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
               <!-- ML start here -->
               <div
-                class="col-lg-4 col-md-6 portfolio-thumbnail all machine_learning uikits webdesign">
+                class="col-lg-4 col-md-6 portfolio-thumbnail all machine_learning deep_learning uikits webdesign">
                 <a href="pages/sagemaker_ml.html">   
                   <img class="image-overlay" src="images/portfolio/sagemake_ml_wat.png" alt="img" />
                   <div>Sales Forecasting</div>              
@@ -415,10 +415,19 @@
 
               <!-- Cloud warehouse using synapse -->
               <div
-                class="col-lg-4 col-md-6 portfolio-thumbnail all machine_learning uikits webdesign">
+                class="col-lg-4 col-md-6 portfolio-thumbnail all data_eng uikits webdesign">
                 <a href="pages/adf_synapse.html">   
                   <img class="image-overlay" src="images/portfolio/cloud_warehouse_adf_synapse_wat.png" alt="img" />
                   <div>Cloud Warehouse using Azure Synapse</div>              
+                </a> 
+              </div>
+
+                <!-- Geospatial Data Analsysis -->
+                <div
+                class="col-lg-4 col-md-6 portfolio-thumbnail all data_analysis uikits webdesign">
+                <a href="pages/geo_spatial_analysis.html">   
+                  <img class="image-overlay" src="images/portfolio/kepler_gl_wat.png" alt="img" />
+                  <div>Big Data Geospatial Analysis</div>              
                 </a> 
               </div>
 
