--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="header-content">
           <h1>I'm <span class="typed"></span></h1>
-          <p>Data Scientist, ML|DL Engineer, Data Engineer</p>
+          <p>Data Engineer, Data Scientist, and ML|DL Engineer</p>
 
           <ul class="list-unstyled list-social">
             <li>
@@ -235,7 +235,7 @@
               <!-- Entertainer FZ LLC -->
               <div ><img src="images/ent.jpeg" /><br><br>
                 <p class="company">
-                  Senior Data Scientist
+                  Senior Data Consultant
                 </p> 
                 <p class="job-date">
                   | Sep 2020 - Feb 2022
@@ -243,7 +243,7 @@
               </div>
               <p class="separator">
                 <ul>
-                  <li>Lead a team of Data Scientists and Data Engineers.</li>
+                  <li>Lead a team of Data Engineers and Data Scientists.</li>
                   <li>Streamlined Big data pipeline for AD-hoc reporting.</li>
                   <li>Created Big Data pipelines which handle more than 57 GB of data daily.</li>
                   <li>Developed Recommendation Engine that generate precise recommendation for The Entertainer customers.
@@ -267,23 +267,23 @@
               <!-- Systems Limited Solution -->
               <div ><img src="images/system.jpeg" /><br>
                 <p class="company">
-                  Machine Learning Engineer 
+                  Software Engineer (Data)
                 </p> 
                 <p class="job-date">
                   | June 2018 - Aug 2020
                 </p>
               </div>
               <p class="separator">
-               Working as full time machine learning engineer in top I.T firm of Pakistan.
-               Successfully led and completed various sales forecasting and computer vision
-               projects. My roles ranges from analyzing data, performing eda, to creating complete
+               Contributed as software Engineer(Data) in top I.T firm of Pakistan.
+               Successfully led and completed various data projects. My roles ranges from 
+               creating ETL, analyzing data, performing eda, to creating complete
                machine/deep learning pipeline. Besides development also deployed model on 
                cloud services like Amazon Sagemaker, Google AI Platform and Microsoft Azure.
                So far built solutions for diverse industries like retail, mortgage, apparel
                and computer vision. 
               </p>
             </div>
-            <!-- Innovative Solution -->
+            <!-- Innovative Solution 
             <div ><img src="images/is.png" height="150" width="200"/><br>
               <p class="company">
                 Deep Learning Researcher
@@ -299,6 +299,7 @@
              edge hardware technology like Nvidia DGX machine and also on famous deep learning framework
              like google Tensorflow.
             </p>
+            -->
             <!-- Royal Cyber -->
             <div ><img src="images/rc.png"/><br>
               <p class="company">
